# llama-cpp-jni-kotlin

./: .gitignore  README.md  build.sh  download_model.sh  init.sh
kotlin-app/: build.gradle.kts  gradlew  settings.gradle.kts
kotlin-app/src/main/kotlin/: LlamaWrapper.kt  Main.kt  ModelConfig.kt  PromptSuite.kt  QuickSmokeTest.kt
native/: CMakeLists.txt  llama_jni.cpp  llama_jni.h
